--- a/web-portfolio/package.json
+++ b/web-portfolio/package.json
@@ -17,7 +17,8 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
     "react-scroll": "^1.9.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "vercel": "^39.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
