--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -7,29 +7,22 @@ env:
 on:
   push:
     branches:
-      - main  # Trigger workflow on pushes to the main branch
+      - main
 
 jobs:
   Deploy-Production:
-    name: Deploy to Vercel Production
     runs-on: ubuntu-latest
     steps:
-      # Step 1: Checkout Repository
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      # Step 2: Install Vercel CLI
       - name: Install Vercel CLI
         run: npm install --global vercel
 
-      # Step 3: Build and Deploy to Vercel
-      - name: Deploy to Vercel
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
-        run: |
-          vercel deploy \
-            --prebuilt \
-            --prod \
-            --org-id $VERCEL_ORG_ID \
-            --project-id $VERCEL_PROJECT_ID \
-            --token $VERCEL_TOKEN
+      - name: Pull Vercel Environment Information
+        run: vercel pull --yes --environment=production --token=${{secrets.VERCEL_TOKEN}}
+
+      - name: Pull Projects Artifacts
+        run: vercel build --prod --token=${{secrets.VERCEL_TOKEN}}
+
+      - name: Deploy Project Artifacts
+        run: vercel deploy --prebuilt --prod --token=${{secrets.VERCEL_TOKEN}}
