--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install Vercel CLI
-        working-directory: /web-portfolio
+        working-directory: ./web-portfolio
         run: npm install --global vercel
 
       - name: Pull Vercel Environment Information
